cabal-version:      >= 1.10
build-type:         Simple
name:               bake
version:            0.1
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014
synopsis:           Continuous integration system
description:
    Bake is a continuous integration server, designed for large, productive, semi-trusted teams.
    .
    * /Large teams/ where there are at least several contributors working full-time on a single code base.
    .
    * /Productive teams/ which are regularly pushing code, many times a day.
    .
    * /Semi-trusted teams/ where code does not go through manual code review, but code does need to pass a test suite and perhaps some static analysis. People are assumed not to be malicious, but are fallible.
homepage:           https://github.com/ndmitchell/bake#readme
bug-reports:        https://github.com/ndmitchell/bake/issues
tested-with:        GHC==7.8.2, GHC==7.6.3

extra-source-files:
    CHANGES.txt

source-repository head
    type:     git
    location: https://github.com/ndmitchell/bake.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        cmdargs >= 0.10,
        shake >= 0.10,
        directory,
        bytestring,
        text,
        time,
        random,
        hashable,
        HTTP,
        http-types,
        deepseq,
        filepath,
        aeson,
        extra >= 0.2,
        wai >= 3.0.1,
        warp >= 3.0

    exposed-modules:
        Development.Bake

    other-modules:
        Development.Bake.Args
        Development.Bake.Build
        Development.Bake.Client
        Development.Bake.Email
        Development.Bake.Format
        Development.Bake.Git
        Development.Bake.Message
        Development.Bake.Send
        Development.Bake.Server.Brains
        Development.Bake.Server.Start
        Development.Bake.Server.Type
        Development.Bake.Server.Web
        Development.Bake.Type
        Development.Bake.Web

-- don't use 'cabal test' since that loses the child stdout
executable bake-test
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: Test.hs
    other-modules: Example
    ghc-options: -threaded -main-is Test.main
    build-depends:
        base == 4.*,
        cmdargs >= 0.10,
        shake >= 0.10,
        directory,
        bytestring,
        text,
        time,
        random,
        hashable,
        HTTP,
        http-types,
        deepseq,
        aeson,
        extra >= 0.2,
        wai >= 3.0.1,
        warp >= 3.0,
        process,
        filepath
