cabal-version:      >= 1.10
build-type:         Simple
name:               bake
version:            0.3
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014-2015
synopsis:           Continuous integration system
description:
    Bake is a continuous integration server, designed for large, productive, semi-trusted teams.
    .
    * /Large teams/ where there are at least several contributors working full-time on a single code base.
    .
    * /Productive teams/ which are regularly pushing code, many times a day.
    .
    * /Semi-trusted teams/ where code does not go through manual code review, but code does need to pass a test suite and perhaps some static analysis. People are assumed not to be malicious, but are fallible.
homepage:           https://github.com/ndmitchell/bake#readme
bug-reports:        https://github.com/ndmitchell/bake/issues
tested-with:        GHC==7.10.1, GHC==7.8.4, GHC==7.6.3

extra-source-files:
    CHANGES.txt
    README.md

data-files:
    html/favicon.ico

source-repository head
    type:     git
    location: https://github.com/ndmitchell/bake.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        cmdargs >= 0.10,
        shake >= 0.15,
        directory,
        bytestring,
        containers,
        text,
        time,
        random,
        hashable,
        transformers,
        HTTP,
        safe,
        old-locale,
        http-types,
        deepseq,
        filepath,
        aeson,
        sqlite-simple,
        direct-sqlite,
        disk-free-space,
        unordered-containers,
        smtp-mail,
        extra >= 1.1,
        wai >= 3.0.1,
        warp >= 3.0,
        product-profunctors,
        opaleye

    exposed-modules:
        Development.Bake

    other-modules:
        Development.Bake.Build
        Development.Bake.Core.Args
        Development.Bake.Core.Client
        Development.Bake.Core.GC
        Development.Bake.Core.Message
        Development.Bake.Core.Run
        Development.Bake.Core.Send
        Development.Bake.Core.Type
        Development.Bake.Email
        Development.Bake.Git
        Development.Bake.StepGit
        Development.Bake.Pretty
        Development.Bake.Server.Brain
        Development.Bake.Server.Database
        Development.Bake.Server.Memory
        Development.Bake.Server.Property
        Development.Bake.Server.Start
        Development.Bake.Server.Stats
        Development.Bake.Server.Store
        Development.Bake.Server.Web
        General.Database
        General.Extra
        General.HTML
        General.Web
        Paths_bake

-- don't use 'cabal test' since that loses the child stdout
executable bake-test
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: Test.hs
    other-modules:
        Example
        Development.Bake.Test.Simulate
    ghc-options: -threaded -main-is Test.main
    build-depends:
        base == 4.*,
        cmdargs >= 0.10,
        shake >= 0.15,
        directory,
        bytestring,
        containers,
        text,
        old-locale,
        time,
        random,
        hashable,
        HTTP,
        safe,
        http-types,
        transformers,
        deepseq,
        aeson,
        smtp-mail,
        disk-free-space,
        unordered-containers,
        sqlite-simple,
        direct-sqlite,
        extra >= 0.2,
        wai >= 3.0.1,
        warp >= 3.0,
        process,
        filepath,
        product-profunctors,
        opaleye

